istio-gateway.yaml
#Istio gateway is a Kubernetes resource that defines a load balancer that operates at the edge of the mesh, receiving incoming requests and forwarding them to the appropriate service within the mesh.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dlframe-gateway
  namespace: dlframe
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: models-gateway
  namespace: models
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
